--- a/index.html
+++ b/index.html
@@ -1,47 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Nicolas Descreux - page de profil</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Arimo:400,700|Roboto:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <a id="haut"></a>
-  <div>
-    <img class="profile-pic" src="images/profile-pic.jpg" alt="">
-    <h1>Nicolas Descreux</h1>
-    <h2>Programmeur</h2>
-    <p>Description très intéressante, à lire avec la plus grande attention, si vous êtes en train de lire jusqu'ici vous avez probablement perdu quelques secondes de votre vie inutilement, mais si vous lisez jusqu'à la fin ce que j'écris, vous aurez alors appris qu'on peut perdre énormément de temps à lire n'importe quoi !</p>
-    <a href="https://www.pointerpointer.com">Au cas où ...</a>
-  </div>
-  <div>
-    <ul class="list-inline">
-      <li><a href="#"><i class="fab fa-facebook-square"></i> Facebook</a></li>
-      <li><a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-      <li><a href="#"><i class="fab fa-github"></i> Github</a></li>
-    </ul>
-  </div>
-  <div>
-    <table>
-      <tr>
-        <td><img class="movie-pic" src="images/V-pour-vendetta.jpg" alt=""></td>
-        <td>
-          <h3>V pour Vendetta</h3>
-          <p>V pour Vendetta se passe dans l'Angleterre fasciste de l'après-guerre nucléaire, où apparaît un justicier implacable signant ses actes de la lettre V. Obsédé par le souvenir d'une culture désormais interdite et disparue, cruel et terriblement intelligent, V s'attaque aux plus forts symboles de la dictature, animé par un immense désir de vengeance et une indicible haine. La police du Commandeur est sommée de mettre fin ses agissements au plus vite...</p>
-        </td>
-      </tr>
-      <tr>
-        <td><img class="movie-pic" src="images/good_morning_england.jpg" alt=""></td>
-        <td>
-          <h3>Good morning england</h3>
-          <p>Carl vient de se faire renvoyer du lycée, et sa mère a décidé qu'il irait réfléchir à son avenir auprès de son parrain, Quentin. Il se trouve que celui-ci est le patron de Radio Rock, une radio pirate qui émet depuis un bateau en mer du Nord peuplé d'un équipage éclectique de DJ's rock and roll. Un bateau. Huit DJ's. Zéro limites. À leur tête se trouve le Comte, dieu des ondes en synergie totale avec la musique.</p>
-        </td>
-      </tr>
-    </table>
-  </div>
-  <div><a href="#haut">Retour en haut</a></div>
-
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Nicolas Descreux - page de profil</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Arimo:400,700|Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div id="sidebar">
+      <ul>
+        <li><a href="#infos"><i class="fas fa-user"></i></a></li>
+        <li><a href="#movies"><i class="fas fa-film"></i></a></li>
+        <li><a href="#hobbies"><i class="fas fa-meteor"></i></a></li>
+      </ul>
+    </div>
+    <div id="page-content">
+      <a id="infos"></a>
+        <div class="card">
+          <img class="img-circle" src="images/profile-pic.jpg" alt="">
+          <h1>Nicolas Descreux</h1>
+          <h2>Programmeur</h2>
+          <p>Description très intéressante, à lire avec la plus grande attention, si vous êtes en train de lire jusqu'ici vous avez probablement perdu quelques secondes de votre vie inutilement, mais si vous lisez jusqu'à la fin ce que j'écris, vous aurez alors appris qu'on peut perdre énormément de temps à lire n'importe quoi !</p>
+          <a href="https://www.pointerpointer.com">Au cas où ...</a>
+        </div>
+        <div class="card">
+          <ul class="list-inline">
+            <li><a href="#"><i class="fab fa-facebook-square"></i> Facebook</a></li>
+            <li><a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a href="#"><i class="fab fa-github"></i> Github</a></li>
+          </ul>
+        </div>
+        <a id="movies"></a>
+        <div class="card">
+          <h2>Favorite movies</h2>
+          <table>
+            <tr>
+              <td><img class="movie-pic" src="images/V-pour-vendetta.jpg" alt=""></td>
+              <td>
+                <h3>V pour Vendetta</h3>
+                <p>V pour Vendetta se passe dans l'Angleterre fasciste de l'après-guerre nucléaire, où apparaît un justicier implacable signant ses actes de la lettre V. Obsédé par le souvenir d'une culture désormais interdite et disparue, cruel et terriblement intelligent, V s'attaque aux plus forts symboles de la dictature, animé par un immense désir de vengeance et une indicible haine. La police du Commandeur est sommée de mettre fin ses agissements au plus vite...</p>
+              </td>
+            </tr>
+            <tr>
+              <td><img class="movie-pic" src="images/good_morning_england.jpg" alt=""></td>
+              <td>
+                <h3>Good morning england</h3>
+                <p>Carl vient de se faire renvoyer du lycée, et sa mère a décidé qu'il irait réfléchir à son avenir auprès de son parrain, Quentin. Il se trouve que celui-ci est le patron de Radio Rock, une radio pirate qui émet depuis un bateau en mer du Nord peuplé d'un équipage éclectique de DJ's rock and roll. Un bateau. Huit DJ's. Zéro limites. À leur tête se trouve le Comte, dieu des ondes en synergie totale avec la musique.</p>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <a id="hobbies"></a>
+        <div class="card">
+          <h2>My hobbies</h2>
+          <ul class="hobbies list-inline">
+            <li><i class="fas fa-globe-africa"></i> Travelling</li>
+            <li><i class="fas fa-music"></i> Guitar</li>
+            <li><i class="fas fa-film"></i> Movies</li>
+          </ul>
+        </div>
+    </div>
+  </body>
 </html>
